--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 .wrapper {
   display: grid;
-  grid-template-columns: 1fr 5fr;
+  grid-template-columns: 1fr 3.5fr;
   grid-template-rows: 60px auto;
   height: 100vh;
 }
@@ -81,7 +81,8 @@ ul {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  font-size: 20px;
+  font-size: 23px;
+  margin-left: 60px;
 }
 .side-bottom {
   margin-top: auto;
@@ -117,7 +118,7 @@ ul {
 .body label {
   font-size: 25px;
 }
-.body input {
+.body input[type="text"] {
   width: 350px;
   height: 40px;
   border-radius: 100px;
@@ -125,11 +126,15 @@ ul {
   margin-top: 5px;
   margin-bottom: 15px;
 }
-.upload-btn {
+.upload-btn,
+.submit-btn {
   font-size: 25px;
   width: 200px;
   height: 60px;
   border-radius: 25px;
   border: solid black 2px;
   margin-top: 10px;
+}
+.submit-btn {
+  margin-top: 30px;
 }
